# zkllvm-mlir-assigner

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  Readme.md  filter.py  flake.nix  justfile  out.txt
mlir-assigner/: CMakeLists.txt  MLIR.cmake
mlir-assigner/include/mlir-assigner/components/: component_manifest_utilities.hpp  handle_component.hpp
mlir-assigner/include/mlir-assigner/components/boolean/: and.hpp  logic_ops.hpp
mlir-assigner/include/mlir-assigner/components/comparison/: argminmax.hpp  fixed_comparison.hpp  select.hpp
mlir-assigner/include/mlir-assigner/components/fields/: addition.hpp  basic_arith.hpp  subtraction.hpp
mlir-assigner/include/mlir-assigner/components/fixedpoint/: abs.hpp  addition.hpp  ceil.hpp  cmp_set.hpp  conversion.hpp  division.hpp  dot_product.hpp  erf.hpp  exp.hpp  floor.hpp  gather.hpp  log.hpp  mul_rescale.hpp  neg.hpp  remainder.hpp  sqrt.hpp  subtraction.hpp  to_fixpoint.hpp  trigonometric.hpp
mlir-assigner/include/mlir-assigner/components/integer/: arith.hpp  mul_div.hpp  neg.hpp
mlir-assigner/include/mlir-assigner/helper/: asserts.hpp  logger.hpp
mlir-assigner/include/mlir-assigner/memory/: memref.hpp  stack_frame.hpp
mlir-assigner/include/mlir-assigner/parser/: evaluator.hpp  input_reader.hpp  output_writer.hpp  parser.hpp
mlir-assigner/include/mlir-assigner/policy/: default_policy.hpp  policy.hpp  policy_manager.hpp
mlir-assigner/src/: CMakeLists.txt  main.cpp
mlir-assigner/tests/: README.md  circuit_diff.py  run.py
mlir-assigner/tests/Models/BasicMnist/: BasicMnist.res  DotProductBasicMnist.res  basic_mnist.json  basic_mnist.output.json  basic_mnist.res
mlir-assigner/tests/Models/ConvMnist/: UnOptimizedMnist-12.mlir  UnOptimizedMnist-12.res  mnist-12.mlir  mnist-12.output.json  mnist-12.res
mlir-assigner/tests/Models/LinearRegression/: LinearRegression.json  LinearRegression.onnx  LinearRegression.res
mlir-assigner/tests/Models/MobileNet/: gen_out.py  kitten.txt  mobilenetv2-10.fixed.json
mlir-assigner/tests/Models/NanoGPT/: nanoGPT-new.json  nanoGPT-new.onnx
mlir-assigner/tests/Models/RandomForest/: RandomForest.json  RandomForest.res
mlir-assigner/tests/Models/SVM/: SVM.json  SVM.onnx  SVM.res
mlir-assigner/tests/Models/TreeEnsembleRegression/: TreeEnsembleRegression.res
mlir-assigner/tests/Ops/Abs/: AbsSimple.json  AbsSimple.res
mlir-assigner/tests/Ops/Acos/: AcosSimple.mlir  AcosSimple.res
mlir-assigner/tests/Ops/Add/: AddSimple.json
mlir-assigner/tests/Ops/ArgMax/: ArgMaxSimple.json  ArgMaxSimple.res
mlir-assigner/tests/Ops/Ceil/: CeilSimple.mlir  CeilSimple.res
mlir-assigner/tests/Ops/Clip/: ClipSimple.json  ClipSimple.mlir
mlir-assigner/tests/Ops/Conv/: DotProductConvMnist12First.mlir
mlir-assigner/tests/Ops/Current/: NanoGPT.mlir
mlir-assigner/tests/Ops/Current/GatherND/: GatherNDExample1.onnx
mlir-assigner/tests/Ops/Current/Not/: NotSimple.mlir  NotSimple.onnx  NotSimple.res
mlir-assigner/tests/Ops/Current/Or/: OrSimple.mlir
mlir-assigner/tests/Ops/Gemm/: DotProductGemmAlphaBeta.mlir  DotProductGemmAlphaBetaBoth.mlir  DotProductGemmBeta.res  GemmAlphaBetaBothTrans.json  GemmAlphaBetaBothTrans.mlir  GemmBeta.mlir  GemmBeta.res  GemmSimple.mlir
mlir-assigner/tests/Ops/MatMul/: DotProductMatMul11.mlir  DotProductMatMulMultiDim.res  MatMul11.res  MatMulMultiDim.mlir
mlir-assigner/tests/Ops/Mean/: MeanSimple.json  MeanSimple.mlir
mlir-assigner/tests/Ops/Mlir/Conv/: .ignore  ConvMnist12First.json  ConvMnist12First.mlir  ConvMnist12First.res  DotProductConvMnist12First.output.json  DotProductConvMnist12First.res  DotProductConvMnist12Second.json  DotProductConvMnist12Second.output.json  DotProductConvMnist12Second.res
mlir-assigner/tests/Ops/Mlir/Cosh/: CoshMlir.json  CoshMlir.mlir  CoshMlir.output.json  CoshMlir.res
mlir-assigner/tests/Ops/Mlir/Gemm/: DotProductGemmAlphaBeta.json  DotProductGemmAlphaBeta.output.json  DotProductGemmAlphaBeta.res  DotProductGemmAlphaBetaBoth.json  DotProductGemmAlphaBetaBoth.output.json  DotProductGemmAlphaBetaBoth.res  DotProductGemmAlphaBetaBothTrans.mlir  DotProductGemmAlphaBetaBothTrans.output.json  DotProductGemmAlphaBetaBothTrans.res  DotProductGemmBeta.json  DotProductGemmBeta.output.json  DotProductGemmBeta.res  DotProductGemmSimple.json  DotProductGemmSimple.mlir  DotProductGemmSimple.output.json  DotProductGemmSimple.res  GemmAlphaBeta.json  GemmAlphaBeta.output.json  GemmAlphaBeta.res  GemmAlphaBetaBoth.mlir  GemmAlphaBetaBoth.output.json  GemmAlphaBetaBoth.res  GemmAlphaBetaBothTrans.json  GemmAlphaBetaBothTrans.output.json  GemmAlphaBetaBothTrans.res  GemmBeta.output.json  GemmBeta.res  GemmSimple.json  GemmSimple.output.json  GemmSimple.res
mlir-assigner/tests/Ops/Mlir/MatMul/: DotProductMatMul11.res  DotProductMatMul1616.json  DotProductMatMul1616.output.json  DotProductMatMul1616.res  DotProductMatMul1dim.json  DotProductMatMul1dim.mlir  DotProductMatMul1dim.output.json  DotProductMatMul1dim.res  DotProductMatMulMultiDim.output.json  DotProductMatMulMultiDim.res  MatMul11.json  MatMul11.mlir  MatMul11.output.json  MatMul1616.mlir  MatMul1616.output.json  MatMul1616.res  MatMul1dim.mlir  MatMul1dim.output.json  MatMulMultiDim.json  MatMulMultiDim.output.json  MatMulMultiDim.res
mlir-assigner/tests/Ops/Mlir/Sinh/: SinhMlir.json  SinhMlir.mlir  SinhMlir.output.json  SinhMlir.res
mlir-assigner/tests/Ops/Mod/: ModFloat.mlir  ModFloat.onnx
mlir-assigner/tests/Ops/NeedsBlueprintComponent/Acos/: AcosSimple.json  AcosSimple.mlir  AcosSimple.onnx  AcosSimple.res
mlir-assigner/tests/Ops/NeedsBlueprintComponent/Acosh/: AcoshSimple.json  AcoshSimple.mlir
mlir-assigner/tests/Ops/Onnx/: .gitignore
mlir-assigner/tests/Ops/Reciprocal/: ReciprocalSimple.res
mlir-assigner/tests/Ops/Relu/: ReluSimple.json  ReluSimple.res
mlir-assigner/tests/Ops/Softmax/: SoftmaxBasicMnist.res
mlir-assigner/tests/Ops/Sub/: SubSimple.mlir  SubSimple.res
mlir-assigner/tests/Ops/Sum/: SumSimple.mlir
mlir-assigner/tests/Test/Conv/: ConvMnist12First.onnx
src/: CMakeLists.txt  main.cpp
src/parser/: CountPass.cpp
(+914 files in other folders)
